--- a/index.html
+++ b/index.html
@@ -179,20 +179,20 @@
       </a>
 
       <!-- GPay -->
-      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" target="_blank">
+      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/GooglePay_QR.png" target="_blank">
         Pay via GPay
       </a>
     </div>
 
     <!-- Exclusive Members Section -->
     <div class="exclusive" onclick="openVip()">
-      Offical Login
+      Official Login Page
     </div>
 
     <div id="vipBox" class="vip-box">
-      <div class="cut-price">₹452.9</div>
+      <div class="cut-price">₹99</div>
       <div class="new-price">₹49</div>
-      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/49rsqr.jpeg" alt="VIP QR" />
+      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" alt="VIP QR" />
       <div class="special-text">You’re special for me</div>
     </div>
 
@@ -200,8 +200,8 @@
     <div class="whatsapp">
       ✅ After payment, send screenshot on
       <br />
-      <a href="https://wa.me/918467876568" target="_blank">
-        WhatsApp: +91 8467876568
+      <a href="https://wa.me/91XXXXXXXXXX" target="_blank">
+        WhatsApp: +91 XXXXXXXXXX
       </a>
     </div>
 
