--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
 
     <!-- Exclusive Members Section -->
     <div class="exclusive" onclick="openVip()">
-      Official Login Page
+      Exclusive price for special members
     </div>
 
     <div id="vipBox" class="vip-box">
-      <div class="cut-price">₹99</div>
+      <div class="cut-price">₹452.9</div>
       <div class="new-price">₹49</div>
-      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" alt="VIP QR" />
+      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/49rsqr.jpeg" alt="VIP QR" />
       <div class="special-text">You’re special for me</div>
     </div>
 
