Update payment links and member section text

--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
       </a>
 
       <!-- GPay -->
-      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/GooglePay_QR.png" target="_blank">
+      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" target="_blank">
         Pay via GPay
       </a>
     </div>
 
     <!-- Exclusive Members Section -->
     <div class="exclusive" onclick="openVip()">
-      Exclusive price for special members
+      Official Login
     </div>
 
     <div id="vipBox" class="vip-box">
@@ -200,8 +200,8 @@
     <div class="whatsapp">
       ✅ After payment, send screenshot on
       <br />
-      <a href="https://wa.me/91XXXXXXXXXX" target="_blank">
-        WhatsApp: +91 XXXXXXXXXX
+      <a href="https://wa.me/918467876568" target="_blank">
+        WhatsApp: +91 8467876568
       </a>
     </div>
 
