Update GPay link and VIP pricing details

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </a>
 
       <!-- GPay -->
-      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" target="_blank">
+      <a class="btn gpay" href="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/GooglePay_QR.png" target="_blank">
         Pay via GPay
       </a>
     </div>
@@ -191,8 +191,8 @@
 
     <div id="vipBox" class="vip-box">
       <div class="cut-price">₹452.9</div>
-      <div class="new-price">₹49</div>
-      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/49rsqr.jpeg" alt="VIP QR" />
+      <div class="new-price">₹89</div>
+      <img src="https://raw.githubusercontent.com/deepakxo/Buy-The-Blaze-/main/99rs.png" alt="VIP QR" />
       <div class="special-text">You’re special for me</div>
     </div>
 
